--- a/server/Makefile
+++ b/server/Makefile
@@ -1,9 +1,9 @@
 CC=g++ -std=c++11
 CFLAGS=-c -Wpedantic -Ofast -Wall -ggdb3 -lpthread
-SOURCES=server.cpp
+SOURCES=server.cpp ../Communication.cpp
 OBJECTS=$(SOURCES:.cpp=.o)
 EXECUTABLE= whoServer
-ARGS= -q 55000 -10 -s 56000 -w 2 -b 4096
+ARGS= -q 56321 -s 57642 -w 2 -b 4096
 #-q queryportNumber -s statiscticsportnumber -w numthreads -b buffersize
 VAL=valgrind --leak-check=full
 
