--- a/aggr_workers/Makefile
+++ b/aggr_workers/Makefile
@@ -3,7 +3,7 @@ CFLAGS=-c -Wpedantic -Ofast -Wall -ggdb3
 SOURCES=main_aggregator.cpp main_worker.cpp date.cpp record.cpp ht.cpp aht.cpp bb.cpp tree.cpp heap.cpp ../Communication.cpp Pair.cpp PairArray.cpp PidArray.cpp quicksort.cpp StringArray.cpp Triplette.cpp TripleArray.cpp date_format.cpp Summ.cpp SummArray.cpp
 OBJECTS=$(SOURCES:.cpp=.o)
 EXECUTABLE=master
-ARGS= -w 3 -b 4096 -s 46.246.193.8 -p 57642 -i ../../input_dir_large
+ARGS= -w 3 -b 4096 -s 127.0.0.1 -p 57642 -i ../../input_dir_large
 #-w -> number of workers, -b -> buffersize for pipes, -s -> server IP  -i -> input directory, -p -> serverPort
 VAL=valgrind --leak-check=full
 
@@ -24,5 +24,11 @@ clean:
 val:
 	$(VAL) ./$(EXECUTABLE) $(FILE) $(ARGS)
 
-test:
-	./$(EXECUTABLE) $(FILE) -w 1 -b 4096 -s 46.246.193.8 -p 57642 -i ../../input_dir_tiny
+test1:
+	./$(EXECUTABLE) $(FILE) -w 1 -b 4096 -s 127.0.0.1 -p 57642 -i ../../input_dir_tiny
+
+test2:
+	./$(EXECUTABLE) $(FILE) -w 2 -b 4096 -s 127.0.0.1 -p 57642 -i ../../input_dir_tiny
+
+test3:
+	./$(EXECUTABLE) $(FILE) -w 3 -b 4096 -s 127.0.0.1 -p 57642 -i ../../input_dir_tiny
