--- a/server/Makefile
+++ b/server/Makefile
@@ -3,9 +3,9 @@ CFLAGS=-c -pthread -Wpedantic -Ofast -Wall -ggdb3
 SOURCES=server.cpp ../Communication.cpp PortCountries.cpp PCArray.cpp Queue.cpp ../StringArray.cpp
 OBJECTS=$(SOURCES:.cpp=.o)
 EXECUTABLE= whoServer
-ARGS= -q 56321 -s 57642 -w 2 -b 4096
+ARGS= -q 56321 -s 58987 -w 2 -b 4096
 #-q queryportNumber -s statiscticsportnumber -w numthreads -b buffersize
-VAL=valgrind --leak-check=full --tool=drd 
+VAL=valgrind --tool=drd 
 
 all: $(SOURCES) $(EXECUTABLE)
 
